<resources>
    <string name="app_name">Gramin Shiksha Sahyog</string>
    <string name="fill_all_details">Please enter all the details correctly</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="visibilty">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string-array name="qualifications">
        <item>High School</item>
        <item>Higher Secondary</item>
        <item>Graduate</item>
        <item>Post-Graduate</item>
    </string-array>

    <string-array name="mentorQualifications">
        <item>Graduate</item>
        <item>Post-Graduate</item>
        <item>Doctorate</item>
    </string-array>

    <string-array name="english_tutorials">
    <item>English Tutorials</item>
    </string-array>



    <string name="skills">Skills</string>
    <string name="progress">Progress</string>
    <string name="additional_info">Additional Info</string>
    <string name="ques_living">What do you do for a living?</string>
    <string name="ques_location">Add your location</string>
    <string name="ques_email">Add your email</string>
    <string name="private_info">Private Information</string>
    <string name="gender">Gender</string>
    <string name="gender_colon">"Gender: "</string>
    <string name="phone">Phone</string>
    <string name="phone_colon">"Phone: "</string>
    <string name="dob">D/O/B</string>
    <string name="dob_colon">"D/O/B: "</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_in">Sign in</string>
    <string name="others">Others</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="mobilno_email">Mobile No./Email ID</string>
    <string name="new_here">New here?Create an account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="qualification">Qualification</string>
    <string name="jobs">Jobs</string>
    <string name="sign_up">Sign up</string>
    <string name="create">Create</string>
    <string name="account">Account</string>
    <string name="want_to_contribute">Want to contribute to this social cause?</string>
    <string name="become_a_mentor">Become a Mentor!</string>
    <string name="redirect_sign_in">Already have an account? Click here to Sign in!</string>

    <string name="badges_text">Badges Earned</string>
    <string name="courses_number_text">10+ Courses</string>
    <string name="english_course">English Course</string>
    <string name="computer_course">Computer Course</string>
    <string name="skill_grade">Your Skill Grade</string>
    <string name="grade_A" translatable="false">A</string>
    <string name="grade_B" translatable="false">B</string>
    <string name="grade_C" translatable="false">C</string>
    <string name="grade_D" translatable="false">D</string>
    <string name="grade_E" translatable="false">E</string>
    <string name="positive_feedback_text">You are doing amazing!</string>
    <string name="motivational_feedback_text">You can do better!</string>
    <string name="negatice_feedback_text">Your performance has not been up to the mark!</string>
    <string name="courses_enrolled">Courses Enrolled: </string>
    <string name="courses_completed">Courses Completed: </string>
    <string name="quizzes_taken">Quizzes Taken: </string>
    <string name="quiz_avg_score">Average Quiz Score: </string>
    <string name="score_benefit">Skill score helps NGOs to award scholarships, incentives and loans.</string>
    <string name="find_mentors">Find Mentors</string>
    <string name="your_mentors">Your Mentors</string>
    <string name="govt_schemes">Govt. Schemes</string>
    <string name="ngo_schemes">NGO Schemes</string>
    <string name="learn">Learn</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_post">Add Post</string>
    <string name="your_communities">Your Communities</string>
    <string name="stats">Stats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_community">Create a new community</string>
    <string name="enrollment_count">Enrollment Count</string>
    <string name="enrollment_statistics">Enrollment Statistics</string>
    <string name="total_enrollment">Total Enrollment: </string>
    <string name="weekly">Last Week: </string>
    <string name="monthly">Last Month: </string>
    <string name="enrollments">Enrollments</string>
    <string name="as_a_student">Student</string>
    <string name="as_a_mentor">Mentor</string>
    <string name="mobile_or_email">Mobile No./Email ID</string>
    <string name="create_student_account">New here? Create a Student Account</string>
    <string name="create_mentor_account">Become a Mentor!</string>
    <string name="forgot_helper">Enter your email below to receive an email to reset your password</string>
    <string name="send">Send</string>
    <string name="sign_out">Sign out</string>
    <string name="mentorship_programme">The Mentorship Programme in Gramin Shiksha Sahyog enables you to become a rural social worker at grassroot level.  You can provide couselling to the needy rural youth on their education, career choices and businesses.Join us and become a real HERO!</string>
    <string name="mentorship">Mentorship</string>
    <string name="programme">Programme</string>
    <string name="choose_community">Choose community</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mentor_posts">Mentor Posts</string>
    <string name="community">Community</string>
    <string name="thanks">Thank you</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="enroll">Enroll</string>
</resources>