<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/dashboard"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_backgroundColor="@color/orange"
        android:iconTint="@color/black"/>

    <item android:id="@+id/addPost"
        android:title="@string/add_post"
        android:icon="@drawable/add_post"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_backgroundColor="@color/orange"
        android:iconTint="@color/black"/>

    <item android:id="@+id/mentorAccount"
        android:title="@string/account"
        android:icon="@drawable/account"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_backgroundColor="@color/orange"
        android:iconTint="@color/black"/>
</menu>