<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.MentorStatsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enrollment_count"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvText1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/card1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/enrollment_statistics"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_enrollment"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvText2"
                app:layout_constraintTop_toBottomOf="@id/tvText2"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tvTotalValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="331"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="@id/tvTotal"
                app:layout_constraintBottom_toBottomOf="@id/tvTotal"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvWeekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekly"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvTotal"
                app:layout_constraintTop_toBottomOf="@id/tvTotal"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvWeeklyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="61"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="@id/tvWeekly"
                app:layout_constraintBottom_toBottomOf="@id/tvWeekly"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvMonthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="@id/tvWeekly"
                app:layout_constraintTop_toBottomOf="@id/tvWeekly"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvMonthlyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="@id/tvMonthly"
                app:layout_constraintBottom_toBottomOf="@id/tvMonthly"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>