<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Posted on 01:02 pm \n 9th September, 2023"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/profilePicture"
        app:layout_constraintStart_toEndOf="@id/profilePicture"
        app:layout_constraintTop_toTopOf="@id/profilePicture" />

    <TextView
        android:id="@+id/tvPostText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="Hello everyone! \nI have listed out some career options for those who are passing 12th boards this year \nVocational Training
        \nIT and computer skills \n Healthcare \n Teaching and education \n Social welfare \n Media
 \n Will give more details soon."
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/profilePicture"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnThank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/thanks"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        android:ems="9"
        app:icon="@drawable/heart"
        android:layout_marginStart="20dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnReply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPostText"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@color/white"
        android:text="@string/reply"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        android:textSize="11sp"
        app:icon="@drawable/reply"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnThank"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnThank"
        app:layout_constraintTop_toTopOf="@+id/btnThank"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/delete"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/btnThank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnReply"
        app:layout_constraintTop_toTopOf="@id/btnThank"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnThank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>